<resources>
	<string name="app_name">Employee Database</string>
	<string name="refresh">Refresh</string>
	<string name="settings">Settings</string>
	<string name="edit">Edit</string>
	<string name="add_employee">Add Employee</string>
	<string name="edit_employee">Edit Employee</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="save_changes">Save changes.</string>
	<string name="discard_changes">Your changes will be discarded.</string>
	<string name="delete_employee">Employee will be deleted.</string>
	<string name="server_address">Server Address:</string>
	<string name="server_port">Server Port:</string>
	<string name="name_label">Name:</string>
	<string name="gender_label">Gender:</string>
	<string name="nat_insc_no_label">National Insurance Number:</string>
	<string name="dob_label">DoB:</string>
	<string name="address_label">Address:</string>
	<string name="postcode_label">Postcode:</string>
	<string name="email_label">Email:</string>
	<string name="title_label">Title:</string>
	<string name="id_label">ID:</string>
	<string name="salary_label">Salary:</string>
	<string name="start_date_label">Start Date:</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="salary_unit">£%1$s</string>
</resources>